--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,53 @@
+version: "3.9"
+
 services:
+  redis:
+    image: redis:7-alpine
+    container_name: redis
+    ports:
+      - "6379:6379"
+
   qdrant:
-    image: qdrant/qdrant:latest
+    image: qdrant/qdrant:v1.2.1
+    container_name: qdrant
     ports:
       - "6333:6333"
     volumes:
       - qdrant_storage:/qdrant/storage
+    environment:
+      QDRANT__SERVICE__GRPC_PORT: 6334
 
-  redis:
-    image: redis:7
+  embed-server:
+    build:
+      context: ./backend
+      dockerfile: embed.Dockerfile
+    container_name: embed-server
     ports:
-      - "6379:6379"
+      - "5001:5001"
+    environment:
+      HF_API_KEY: ${HF_API_KEY}
+
+  backend-server:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: backend-server
+    ports:
+      - "8080:8080"
+    environment:
+      FRONTEND_ORIGIN: http://localhost:3000
+      REDIS_URL: redis://redis:6379
+      QDRANT_URL: http://qdrant:6333
+      QDRANT_COLLECTION: news_passages
+      EMBED_SERVER_URL: http://embed-server:5001
+      SESSION_TTL_SECONDS: 604800
+      GEMINI_API_URL: ""
+      GEMINI_API_KEY: ""
+      HF_API_KEY: ${HF_API_KEY}
+    depends_on:
+      - redis
+      - qdrant
+      - embed-server
 
 volumes:
   qdrant_storage:
