--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "type": "commonjs",
   "scripts": {
     "start": "node server.js",
+    "server": "node server.js",
+    "embed": "node embed-server.js",
+    "ingest": "node ingest.js",
     "dev": "nodemon server.js"
   },
   "keywords": [],
@@ -12,11 +15,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@xenova/transformers": "^2.17.2",
     "axios": "^1.12.2",
+    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "ioredis": "^5.7.0",
+    "newspaperjs": "^1.0.8",
+    "node-fetch": "^3.3.2",
+    "rss-parser": "^3.13.0",
     "socket.io": "^4.8.1",
     "uuid": "^13.0.0"
   },
