--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@xenova/transformers": "^2.17.2",
     "axios": "^1.12.2",
     "body-parser": "^2.2.0",
+    "cheerio": "^1.1.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
